<resources>
    <string name="app_name">Simple Stock</string>

    <string name="title_button_login">Entrar</string>
    <string name="title_form_login">Sign Up</string>
    <string name="buttonCadastrar">Salvar</string>
    <string name="button_pesquisar">Buscar</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="qtd_produtos">Produtos</string>
    <string name="qtd_categorias">Categorias</string>

    <string name="novo_usuario">Novo Usuário</string>

    <string name="menu_home">Home</string>
    <string name="menu_cadastro_usuario">Usuário</string>
    <string name="menu_cadastro_fornecedor">Fornecedor</string>
    <string name="menu_cadastro_produto">Produto</string>
    <string name="menu_cadastro_categoria">Categoria</string>
    <string name="menu_gerenciador_estoque">Estoque</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_nome_usuario">Nome</string>
    <string name="hint_cpf_usuario">Cpf</string>
    <string name="hint_produto">Produto</string>
    <string name="hint_fornecedor">Fornecedor</string>
    <string name="hint_cnpj">CNPJ</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_quantidade">Quantidade</string>
    <string name="hint_preco_custo">Varejo</string>
    <string name="hint_preco_venda">Venda</string>
    <string name="hint_descricao">Descrição</string>
    <string name="text_selecione_imagem">Selecionar imagem!</string>

    <string name="carregando">Carregando...</string>
    <string name="simple_stock">Copyright Simple Stock - Versão 1.0</string>
    <string name="sair">Sair</string>

    <string-array name="nivel_acesso">
        <item>Acessibilidade</item>
        <item>USUÁRIO</item>
        <item>ADMINISTRADOR</item>
    </string-array>

    <string-array name="categorias_produto">
        <item>Categoria</item>
        <item>Sala de estar</item>
        <item>Sala de jantar</item>
        <item>Quarto</item>
        <item>Cozinha</item>
        <item>Home office</item>
        <item>Eletrodomésticos</item>
        <item>Iluminação</item>
        <item>Decoração</item>
        <item>Cama</item>
        <item>Mesa</item>
        <item>Cadeira</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>