<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".views.fragments.FornecedorFragment">

    <LinearLayout
        android:id="@+id/linearLayoutFornecedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/editTextNomeFornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@drawable/nome_cadastro_usuario"
            android:hint="@string/hint_fornecedor"
            android:padding="15dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextCnpjFornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@drawable/cnpj"
            android:hint="@string/hint_cnpj"
            android:inputType="number"
            android:padding="15dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextEmailFornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@drawable/email_cadastro_usuario"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTelefoneFornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@drawable/telefone"
            android:hint="@string/hint_telefone"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonCadastrarFornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/botao_arredondado"
            android:padding="8dp"
            android:text="@string/buttonCadastrar"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

</FrameLayout>