<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.ProdutoFragment">

    <LinearLayout
        android:id="@+id/linearLayoutProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:padding="15dp"
        android:background="@color/form"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextNomeProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_produto"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@drawable/nome_cadastro_usuario"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerCategoriaProduto"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/borda_edittext"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:spinnerMode="dialog"/>

            <Spinner
                android:id="@+id/spinnerFornecedorProduto"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/borda_edittext"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:spinnerMode="dialog"/>
        </LinearLayout>

        <EditText
            android:id="@+id/editTextQuantidadeProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@drawable/quantidade_produto"
            android:hint="@string/hint_quantidade"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextPrecoVarejo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@drawable/simbolo_dinheiro"
            android:hint="@string/hint_preco_custo"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editTextPrecoVenda"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@drawable/simbolo_dinheiro"
            android:hint="@string/hint_preco_venda"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:textSize="20sp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/editTextDescricaoProduto"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/borda_edittext"
            android:hint="@string/hint_descricao"
            android:layout_marginTop="10dp"
            android:gravity="top|start"
            android:inputType="textAutoComplete"
            android:padding="15dp"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewFotoProduto"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/textViewSelecionarImagem"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"
                android:text="@string/text_selecione_imagem"/>

        </LinearLayout>

        <Button
            android:id="@+id/buttonCadastrarProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/buttonCadastrar"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/botao_arredondado"
            android:padding="8dp"/>

    </LinearLayout>

</FrameLayout>