<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.UsuarioFragment">

    <LinearLayout
        android:id="@+id/linearLayoutUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:elevation="20dp"
        android:padding="15dp"
        android:background="@color/card"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/add_foto"/>

        <EditText
            android:id="@+id/editTextNomeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome_usuario"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@drawable/nome_cadastro_usuario"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/spinnerNivelAcesso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borda_edittext"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:entries="@array/nivel_acesso"/>

        <EditText
            android:id="@+id/editTextEmailUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@drawable/email_cadastro_usuario"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/editTextSenhaUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borda_edittext"
            android:drawableLeft="@drawable/senha_cadastro_usuario"
            android:hint="@string/hint_password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/buttonCadastrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/buttonCadastrar"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/botao_arredondado"
            android:padding="8dp"/>

    </LinearLayout>

</FrameLayout>